# salary-matching

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.api  HANDOVER.md  PRODUCTION_STATE.txt  README.md  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt
.ai/: architecture.md  common-tasks.md  conventions.md  file-header-template.md  module-index.md
.claude/: debug-changes.md  debug-session-2026-06-01.md
.claude/agents/: code-reviewer.md  db-agent.md  design-consultant.md  embeddings-agent.md  frontend-agent.md  infra-agent.md  matching-agent.md
.claude/commands/: backfill-status.md  crawl-check.md  match-debug.md  schema-diff.md
.github/workflows/: backfill-rich-fields.yml  daily-crawl-1.yml  daily-crawl-2.yml  daily-crawl.yml  daily-embed.yml  (+2 more)
docs/: ARCHITECTURE.md  BACKLOG.md  CACHING_STRATEGIES.md  CRAWL_STRATEGY.md  INDEX.md  NEXT_STEPS.md  REPOSITORY_MAP.md  RUNTIME_FLOWS.md  SUPABASE_RPC.md  TECH_STACK.md  openrouter-setup.txt
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.js
notebooks/: experience_clustering_v2.ipynb  matching_analysis.ipynb
scripts/: BACKFILL_README.md  LOCAL_CRAWL_WORKFLOW.md  backfill_classifications.py  backfill_company_names.py  backfill_v2.py  canonicalize_companies.py  clear_cag_data.sql  clear_database.sql  cluster_analysis.py  interest_profile.txt  schema.sql  similarity_analysis.py  telegram_debug.py  telegram_notify.py  test_llm_cleaner.py  train_classifiers.py
tests/: test_job_description_extractor.py  test_smoke.py
(+171 files in other folders)
