[project]
name = "mcf"
version = "0.1.0"
description = "MyCareersFuture and Careers@Gov job crawler, BGE embeddings, and resume/taste matching API with Next.js dashboard"
readme = "README.md"
authors = [
    { name = "Wong Ding Feng", email = "dingfengwong@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT[crypto]>=2.8.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "pypdf>=6.7.4",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "typer>=0.21.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
mcf = "mcf.cli.cli:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "build>=1.3.0",
    "hdbscan>=0.8.42",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "nbconvert>=7.17.0",
    "pandas>=3.0.2",
    "pip>=25.3",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
    "sphinx>=9.0.4",
    "twine>=6.2.0",
    "umap-learn>=0.5.11",
]
